{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 54,
  "lineage": "2ce21197-ed91-bf5e-59ce-e038216d5349",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e201d59d8f26ec91",
            "domain": "vpc",
            "id": "eipalloc-0e201d59d8f26ec91",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-234-55-207.compute-1.amazonaws.com",
            "public_ip": "3.234.55.207",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "CNB-eip-0"
            },
            "tags_all": {
              "Name": "CNB-eip-0",
              "backup": "true",
              "costCenter": "SYSENG",
              "environment": "prod",
              "expirationDate": "12/12/2022",
              "owner": "eanselmi@edrans.com",
              "project": "CNB",
              "role": "production",
              "tagVersion": "1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.cnb_igw",
            "aws_vpc.cnb_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a2be822384b7317d",
            "domain": "vpc",
            "id": "eipalloc-0a2be822384b7317d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-71-99-3.compute-1.amazonaws.com",
            "public_ip": "52.71.99.3",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "CNB-eip-1"
            },
            "tags_all": {
              "Name": "CNB-eip-1",
              "backup": "true",
              "costCenter": "SYSENG",
              "environment": "prod",
              "expirationDate": "12/12/2022",
              "owner": "eanselmi@edrans.com",
              "project": "CNB",
              "role": "production",
              "tagVersion": "1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.cnb_igw",
            "aws_vpc.cnb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cnb_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:947941747067:internet-gateway/igw-086d1718596bb8f1e",
            "id": "igw-086d1718596bb8f1e",
            "owner_id": "947941747067",
            "tags": {
              "Name": "CNB IGW"
            },
            "tags_all": {
              "Name": "CNB IGW",
              "backup": "true",
              "costCenter": "SYSENG",
              "environment": "prod",
              "expirationDate": "12/12/2022",
              "owner": "eanselmi@edrans.com",
              "project": "CNB",
              "role": "production",
              "tagVersion": "1"
            },
            "vpc_id": "vpc-0a9dab0579123e7aa"
          },
          "dependencies": [
            "aws_vpc.cnb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateways",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e201d59d8f26ec91",
            "connectivity_type": "public",
            "id": "nat-0324e227bf30b5abf",
            "network_interface_id": "eni-020a04c898f01da68",
            "private_ip": "10.200.0.49",
            "public_ip": "3.234.55.207",
            "subnet_id": "subnet-0d5b98a7d48e22b9d",
            "tags": {
              "Name": "CNB-NGW-0"
            },
            "tags_all": {
              "Name": "CNB-NGW-0",
              "backup": "true",
              "costCenter": "SYSENG",
              "environment": "prod",
              "expirationDate": "12/12/2022",
              "owner": "eanselmi@edrans.com",
              "project": "CNB",
              "role": "production",
              "tagVersion": "1"
            }
          },
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.cnb_igw",
            "aws_subnet.cnb_public_subnets",
            "aws_vpc.cnb_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a2be822384b7317d",
            "connectivity_type": "public",
            "id": "nat-048a8c0ac73f69315",
            "network_interface_id": "eni-0880a02c8b179dbe0",
            "private_ip": "10.200.1.43",
            "public_ip": "52.71.99.3",
            "subnet_id": "subnet-04b33ad5e3dbc11e3",
            "tags": {
              "Name": "CNB-NGW-1"
            },
            "tags_all": {
              "Name": "CNB-NGW-1",
              "backup": "true",
              "costCenter": "SYSENG",
              "environment": "prod",
              "expirationDate": "12/12/2022",
              "owner": "eanselmi@edrans.com",
              "project": "CNB",
              "role": "production",
              "tagVersion": "1"
            }
          },
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.cnb_igw",
            "aws_subnet.cnb_public_subnets",
            "aws_vpc.cnb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cnb_private_crts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:947941747067:route-table/rtb-005acff78ea005d81",
            "id": "rtb-005acff78ea005d81",
            "owner_id": "947941747067",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0324e227bf30b5abf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CNB-Private-CRT-us-east-1a"
            },
            "tags_all": {
              "Name": "CNB-Private-CRT-us-east-1a",
              "backup": "true",
              "costCenter": "SYSENG",
              "environment": "prod",
              "expirationDate": "12/12/2022",
              "owner": "eanselmi@edrans.com",
              "project": "CNB",
              "role": "production",
              "tagVersion": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9dab0579123e7aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.cnb_igw",
            "aws_nat_gateway.nat_gateways",
            "aws_subnet.cnb_public_subnets",
            "aws_vpc.cnb_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:947941747067:route-table/rtb-0e7fe0c4706739beb",
            "id": "rtb-0e7fe0c4706739beb",
            "owner_id": "947941747067",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-048a8c0ac73f69315",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CNB-Private-CRT-us-east-1b"
            },
            "tags_all": {
              "Name": "CNB-Private-CRT-us-east-1b",
              "backup": "true",
              "costCenter": "SYSENG",
              "environment": "prod",
              "expirationDate": "12/12/2022",
              "owner": "eanselmi@edrans.com",
              "project": "CNB",
              "role": "production",
              "tagVersion": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9dab0579123e7aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.cnb_igw",
            "aws_nat_gateway.nat_gateways",
            "aws_subnet.cnb_public_subnets",
            "aws_vpc.cnb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cnb_public_crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:947941747067:route-table/rtb-0ac969649e570e18b",
            "id": "rtb-0ac969649e570e18b",
            "owner_id": "947941747067",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-086d1718596bb8f1e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CNB-Public-CRT"
            },
            "tags_all": {
              "Name": "CNB-Public-CRT",
              "backup": "true",
              "costCenter": "SYSENG",
              "environment": "prod",
              "expirationDate": "12/12/2022",
              "owner": "eanselmi@edrans.com",
              "project": "CNB",
              "role": "production",
              "tagVersion": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9dab0579123e7aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cnb_igw",
            "aws_vpc.cnb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cnb_crta_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0114f2be026aacd48",
            "route_table_id": "rtb-005acff78ea005d81",
            "subnet_id": "subnet-0e11c5037667489c0"
          },
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.cnb_igw",
            "aws_nat_gateway.nat_gateways",
            "aws_route_table.cnb_private_crts",
            "aws_subnet.cnb_private_subnets",
            "aws_subnet.cnb_public_subnets",
            "aws_vpc.cnb_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e062a559190897d",
            "route_table_id": "rtb-0e7fe0c4706739beb",
            "subnet_id": "subnet-0206a5c870f7d7d77"
          },
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.cnb_igw",
            "aws_nat_gateway.nat_gateways",
            "aws_route_table.cnb_private_crts",
            "aws_subnet.cnb_private_subnets",
            "aws_subnet.cnb_public_subnets",
            "aws_vpc.cnb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cnb_crta_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02802f64e9bb3b9f0",
            "route_table_id": "rtb-0ac969649e570e18b",
            "subnet_id": "subnet-0d5b98a7d48e22b9d"
          },
          "dependencies": [
            "aws_internet_gateway.cnb_igw",
            "aws_route_table.cnb_public_crt",
            "aws_subnet.cnb_public_subnets",
            "aws_vpc.cnb_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bb90819fc6be814",
            "route_table_id": "rtb-0ac969649e570e18b",
            "subnet_id": "subnet-04b33ad5e3dbc11e3"
          },
          "dependencies": [
            "aws_internet_gateway.cnb_igw",
            "aws_route_table.cnb_public_crt",
            "aws_subnet.cnb_public_subnets",
            "aws_vpc.cnb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cnb_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:947941747067:subnet/subnet-0e11c5037667489c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.200.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e11c5037667489c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "947941747067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet-0-us-east-1a"
            },
            "tags_all": {
              "Name": "Private-Subnet-0-us-east-1a",
              "backup": "true",
              "costCenter": "SYSENG",
              "environment": "prod",
              "expirationDate": "12/12/2022",
              "owner": "eanselmi@edrans.com",
              "project": "CNB",
              "role": "production",
              "tagVersion": "1"
            },
            "vpc_id": "vpc-0a9dab0579123e7aa"
          },
          "dependencies": [
            "aws_vpc.cnb_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:947941747067:subnet/subnet-0206a5c870f7d7d77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.200.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0206a5c870f7d7d77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "947941747067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet-1-us-east-1b"
            },
            "tags_all": {
              "Name": "Private-Subnet-1-us-east-1b",
              "backup": "true",
              "costCenter": "SYSENG",
              "environment": "prod",
              "expirationDate": "12/12/2022",
              "owner": "eanselmi@edrans.com",
              "project": "CNB",
              "role": "production",
              "tagVersion": "1"
            },
            "vpc_id": "vpc-0a9dab0579123e7aa"
          },
          "dependencies": [
            "aws_vpc.cnb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cnb_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:947941747067:subnet/subnet-0d5b98a7d48e22b9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.200.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5b98a7d48e22b9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "947941747067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-0-us-east-1a"
            },
            "tags_all": {
              "Name": "Public-Subnet-0-us-east-1a",
              "backup": "true",
              "costCenter": "SYSENG",
              "environment": "prod",
              "expirationDate": "12/12/2022",
              "owner": "eanselmi@edrans.com",
              "project": "CNB",
              "role": "production",
              "tagVersion": "1"
            },
            "vpc_id": "vpc-0a9dab0579123e7aa"
          },
          "dependencies": [
            "aws_vpc.cnb_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:947941747067:subnet/subnet-04b33ad5e3dbc11e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.200.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b33ad5e3dbc11e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "947941747067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-1-us-east-1b"
            },
            "tags_all": {
              "Name": "Public-Subnet-1-us-east-1b",
              "backup": "true",
              "costCenter": "SYSENG",
              "environment": "prod",
              "expirationDate": "12/12/2022",
              "owner": "eanselmi@edrans.com",
              "project": "CNB",
              "role": "production",
              "tagVersion": "1"
            },
            "vpc_id": "vpc-0a9dab0579123e7aa"
          },
          "dependencies": [
            "aws_vpc.cnb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cnb_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:947941747067:vpc/vpc-0a9dab0579123e7aa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.200.0.0/16",
            "default_network_acl_id": "acl-04b641b4cf18630ca",
            "default_route_table_id": "rtb-0c52173e905aa8749",
            "default_security_group_id": "sg-03d820853599e4cef",
            "dhcp_options_id": "dopt-059aa540f16932550",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a9dab0579123e7aa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c52173e905aa8749",
            "owner_id": "947941747067",
            "tags": {
              "Name": "CNB VPC test"
            },
            "tags_all": {
              "Name": "CNB VPC test",
              "backup": "true",
              "costCenter": "SYSENG",
              "environment": "prod",
              "expirationDate": "12/12/2022",
              "owner": "eanselmi@edrans.com",
              "project": "CNB",
              "role": "production",
              "tagVersion": "1"
            }
          }
        }
      ]
    }
  ]
}